Update Project :smile:

--- a/src/main/resources/datasource-cfg.properties
+++ b/src/main/resources/datasource-cfg.properties
@@ -50,18 +50,18 @@ spring.jpa.properties.hibernate.dialect.2=org.hibernate.dialect.MySQLDialect
 # DataSource (PUBLISHER System).
 
 spring.datasource.driver-class-name.3=org.postgresql.Driver
-spring.datasource.url.3=jdbc:postgresql://localhost:5432/publisher
+spring.datasource.url.3=jdbc:postgresql://localhost:5432/ttcntt
 spring.datasource.username.3=postgres
-spring.datasource.password.3=12345
+spring.datasource.password.3=postgres@123
 
 
 
 # DataSource (ADVERTISER System).
 
-spring.datasource.driver-class-name.4=org.postgresql.Driver
-spring.datasource.url.4=jdbc:postgresql://localhost:5432/advertiser
-spring.datasource.username.4=postgres
-spring.datasource.password.4=12345
+spring.datasource.driver-class-name.4=com.mysql.jdbc.Driver
+spring.datasource.url.4=jdbc:mysql://localhost:3306/ttcntt
+spring.datasource.username.4=root
+spring.datasource.password.4=root@123
 
 
 
@@ -77,7 +77,7 @@ spring.jpa.properties.hibernate.dialect.3=org.hibernate.dialect.PostgreSQL9Diale
 
 spring.jpa.show-sql.4=true
 spring.jpa.hibernate.ddl-auto.4=none
-spring.jpa.properties.hibernate.dialect.4=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.properties.hibernate.dialect.4=org.hibernate.dialect.MySQLDialect
 #spring.jpa.properties.hibernate.current_session_context_class.2=org.springframework.orm.hibernate5.SpringSessionContext
 
 
